src/test/ui/libstd-case-typo/env.stderr
error[E0412]: cannot find type `args` in this scope
  --> $DIR/env.rs:4:18
   |
LL | fn test_args(_x: args){}
   |                  ^^^^
   |                  |
   |                  not found in this scope
   |                  help: found a libstd struct with a similar name: `std::env::Args`

error[E0412]: cannot find type `Argsos` in this scope
  --> $DIR/env.rs:6:20
   |
LL | fn test_argsos(_x: Argsos){}
   |                    ^^^^^^
   |                    |
   |                    not found in this scope
   |                    help: found a libstd struct with a similar name: `std::env::ArgsOs`

error[E0412]: cannot find type `Splitpaths` in this scope
  --> $DIR/env.rs:8:16
   |
LL | fn test_sp(_x: Splitpaths<'_>){}
   |                ^^^^^^^^^^
   |                |
   |                not found in this scope
   |                help: found a libstd struct with a similar name: `std::env::SplitPaths`

error[E0412]: cannot find type `vars` in this scope
  --> $DIR/env.rs:10:18
   |
LL | fn test_vars(_x: vars){}
   |                  ^^^^
   |                  |
   |                  not found in this scope
   |                  help: found a libstd struct with a similar name: `std::env::Vars`

error[E0412]: cannot find type `Varsos` in this scope
  --> $DIR/env.rs:12:20
   |
LL | fn test_varsos(_x: Varsos){}
   |                    ^^^^^^
   |                    |
   |                    not found in this scope
   |                    help: found a libstd struct with a similar name: `std::env::VarsOs`

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0412`.
